# mediapipe_receiver_sample

./: LICENSE  README.md  data_player.py  data_recorder.py  holistic_offline.py  holistic_receiver.py  json_dump.py  json_sender.py
mediapipe_receiver_ros/: CMakeLists.txt  package.xml
mediapipe_receiver_ros/config/: holistic_receiver.rviz
mediapipe_receiver_ros/launch/: holistic.launch
mediapipe_receiver_ros/scripts/: holistic_receiver_node.py
utils/: __init__.py  data_conversion.py  draw.py  facetracking.py  handtracking.py  holistic.py  posetracking.py
